--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "wenjie.zhang",
   "license": "ISC",
   "dependencies": {
+    "co": "^4.6.0",
+    "co-prompt": "^1.0.0",
     "commander": "^2.9.0"
   }
 }
